# kobo-core

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: capabilities.rs  clock.rs  html_text.rs  lib.rs  logger.rs  stub_player.rs
src/audio/: a2dp.rs  mod.rs  pipeline.rs  player.rs  synth.rs
src/device/: battery.rs  bt.rs  clock.rs  config.rs  detect.rs  fb.rs  fonts.rs  impls.rs  input.rs  media_keys.rs  mod.rs  paths.rs  power.rs  touch.rs  traits.rs  wake.rs  wifi.rs
src/device/bt/: discover.rs  mod.rs
src/device/registry/: legacy.rs  mod.rs  mtk.rs  nxp.rs
src/device/wifi/: power.rs  scan.rs  wpa.rs
src/formats/: epub.rs  mod.rs
src/formats/epub/: tests.rs
src/html_text/: extract.rs  lines.rs  style.rs
src/html_text/extract/: tests.rs
src/rendering/: common.rs  density.rs  draw.rs  eink.rs  layout.rs  loader.rs  mod.rs  spinner.rs  text_render.rs
src/rendering/draw/: tests.rs
src/rendering/layout/: pagination.rs  tests.rs
src/rendering/text_render/: blit.rs  fonts.rs  tests.rs
